fix navbar size (orcid icon!) and z-index mess

--- a/src/less/paperhive/header.less
+++ b/src/less/paperhive/header.less
@@ -36,7 +36,7 @@
 
 
   .ph-header-submenu-affix {
-    z-index: @zindex-navbar-fixed;
+    z-index: @zindex-navbar-fixed - 1;
   }
 
   // submenu
